# sugars

./: .dockerignore  .env.development  .gitignore  .pdm-python  Dockerfile  ETL-SCHEDULE.md  ETL-实施方案.md  alembic.ini  db-FIXES.md  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: .gitkeep  101306015567_create_initial_market_daily_table.py  39d908252b4b_create_initial_market_daily_table.py
sugars/: __init__.py  etl_service.py  main.py  models.py
sugars/core/: __init__.py  config.py  database_async.py  database_sync.py
sugars/events/: __init__.py  routers.py  scheduler.py
sugars/features/demo/: crud_async.py  crud_sync.py  dependencies.py  models.py  schemas.py
sugars/routers/: market.py  router_async_demo.py  router_sync_demo.py  slim_router_async.py  slim_router_sync.py
sugars/scripts/: SYNC_README.md  __init__.py  sync_data_to_rds.sh  sync_data_to_rds_config.env.example  test_db_connection_async.py  test_db_connection_sync.py  test_db_crud.py
